--- a/src/Bulkzor/Bulkzor.csproj
+++ b/src/Bulkzor/Bulkzor.csproj
@@ -57,11 +57,17 @@
     <Compile Include="BulkTask.cs" />
     <Compile Include="BulkTaskConfiguration.cs" />
     <Compile Include="Bulkzor.cs" />
+    <Compile Include="ChunkConfiguration.cs" />
+    <Compile Include="Results\IndexDocumentsResult.cs" />
+    <Compile Include="Results\DocumentIndexingResult.cs" />
     <Compile Include="IBulkTask.cs" />
+    <Compile Include="IDocumentIndexer.cs" />
     <Compile Include="ISource.cs" />
-    <Compile Include="OnBulkIndexed.cs" />
+    <Compile Include="NestDocumentIndexer.cs" />
+    <Compile Include="OnChunkIndexed.cs" />
     <Compile Include="OnBulkTaskError.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
