--- a/src/Bulkzor/Bulkzor.csproj
+++ b/src/Bulkzor/Bulkzor.csproj
@@ -52,21 +52,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AfterBulkTaskRun.cs" />
-    <Compile Include="BeforeBulkTaskRun.cs" />
+    <Compile Include="Callbacks\AfterBulkTaskRun.cs" />
+    <Compile Include="Callbacks\BeforeBulkTaskRun.cs" />
     <Compile Include="BulkTask.cs" />
-    <Compile Include="BulkTaskConfiguration.cs" />
+    <Compile Include="Configuration\BulkTaskConfiguration.cs" />
     <Compile Include="Bulkzor.cs" />
-    <Compile Include="ChunkConfiguration.cs" />
-    <Compile Include="Results\IndexDocumentsResult.cs" />
+    <Compile Include="Configuration\ChunkConfiguration.cs" />
+    <Compile Include="Events\MaxLengthExceeded.cs" />
+    <Compile Include="Handlers\IHandle.cs" />
+    <Compile Include="Handlers\MaxLengthExceededHandler.cs" />
+    <Compile Include="Indexers\NestDocumentIndexer - Copy.cs" />
+    <Compile Include="IProcessBulk.cs" />
+    <Compile Include="Results\IndexResult.cs" />
     <Compile Include="Results\DocumentIndexingResult.cs" />
     <Compile Include="IBulkTask.cs" />
-    <Compile Include="IDocumentIndexer.cs" />
+    <Compile Include="Indexers\IDocumentsIndexer.cs" />
     <Compile Include="ISource.cs" />
-    <Compile Include="NestDocumentIndexer.cs" />
-    <Compile Include="OnChunkIndexed.cs" />
-    <Compile Include="OnBulkTaskError.cs" />
+    <Compile Include="Indexers\NestDocumentsIndexer.cs" />
+    <Compile Include="Callbacks\OnChunkIndexed.cs" />
+    <Compile Include="Callbacks\OnBulkTaskError.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Types\IndexationError.cs" />
     <Compile Include="Utils\Extensions.cs" />
   </ItemGroup>
   <ItemGroup>
