rewriteen to simplify sintaxis

--- a/src/Bulkzor/Bulkzor.csproj
+++ b/src/Bulkzor/Bulkzor.csproj
@@ -55,24 +55,21 @@
     <Compile Include="Callbacks\AfterBulkTaskRun.cs" />
     <Compile Include="Callbacks\BeforeBulkTaskRun.cs" />
     <Compile Include="BulkTask.cs" />
-    <Compile Include="Commands\BulkDocuments.cs" />
-    <Compile Include="Commands\IndexChunkInParts.cs" />
-    <Compile Include="Commands\IndexChunk.cs" />
-    <Compile Include="Commands\StoreDocumentsNotIndexed.cs" />
     <Compile Include="Configuration\BulkTaskConfiguration.cs" />
     <Compile Include="Bulkzor.cs" />
     <Compile Include="Configuration\ChunkConfiguration.cs" />
-    <Compile Include="Handlers\IHandle.cs" />
-    <Compile Include="Handlers\BulkDocumentsHandler.cs" />
-    <Compile Include="Handlers\IndexChunkHandler.cs" />
-    <Compile Include="Handlers\IndexChunkInPartsHandler.cs" />
-    <Compile Include="Handlers\StoreDocumentsNotIndexedHandler.cs" />
     <Compile Include="IProcessBulk.cs" />
+    <Compile Include="Indexers\DataChunk.cs" />
+    <Compile Include="Indexers\DataChunkIndexer.cs" />
+    <Compile Include="Indexers\IIndexDataChunk.cs" />
+    <Compile Include="Indexers\IIndexData.cs" />
+    <Compile Include="Indexers\IIndexDocuments.cs" />
+    <Compile Include="Indexers\DataIndexer.cs" />
+    <Compile Include="Indexers\NestDocumentsIndexer.cs" />
+    <Compile Include="Results\IndexDocumentsResult.cs" />
     <Compile Include="Results\IndexResult.cs" />
     <Compile Include="IBulkTask.cs" />
-    <Compile Include="Indexers\IDocumentsIndexer.cs" />
     <Compile Include="ISource.cs" />
-    <Compile Include="Indexers\NestDocumentsIndexer.cs" />
     <Compile Include="Callbacks\OnChunkIndexed.cs" />
     <Compile Include="Callbacks\OnBulkTaskError.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
