--- a/src/Bulkzor.Tests/Bulkzor.Tests.csproj
+++ b/src/Bulkzor.Tests/Bulkzor.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2CE375BC-1E1B-4511-A8FC-BC8A3641D62D}</ProjectGuid>
+    <ProjectGuid>{D52BFC8E-02D5-4267-81AA-4AE9447BD184}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Bulkzor</RootNamespace>
-    <AssemblyName>Bulkzor</AssemblyName>
+    <RootNamespace>Bulkzor.Tests</RootNamespace>
+    <AssemblyName>Bulkzor.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -38,24 +38,16 @@
       <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Common.Logging.NLog40, Version=3.3.1.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <HintPath>..\packages\Common.Logging.NLog40.3.3.1\lib\net40\Common.Logging.NLog40.dll</HintPath>
+    <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Elasticsearch.Net, Version=2.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
-      <HintPath>..\packages\Elasticsearch.Net.2.1.1\lib\net45\Elasticsearch.Net.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Nest, Version=2.0.0.0, Culture=neutral, PublicKeyToken=96c599bbe3e70f5d, processorArchitecture=MSIL">
-      <HintPath>..\packages\NEST.2.1.1\lib\net45\Nest.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.8.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.3.1\lib\net45\NLog.dll</HintPath>
+    <Reference Include="Shouldly, Version=2.7.0.0, Culture=neutral, PublicKeyToken=6042cbcb05cbc941, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shouldly.2.7.0\lib\net40\Shouldly.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -68,39 +60,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Callbacks\AfterBulkTaskRun.cs" />
-    <Compile Include="Callbacks\BeforeBulkTaskRun.cs" />
-    <Compile Include="BulkTask.cs" />
-    <Compile Include="Configuration\BulkTaskConfiguration.cs" />
-    <Compile Include="Bulkzor.cs" />
-    <Compile Include="Configuration\ChunkConfiguration.cs" />
-    <Compile Include="IIndexableObject.cs" />
-    <Compile Include="Models\Chunk.cs" />
-    <Compile Include="IProcessBulk.cs" />
-    <Compile Include="Models\ChunkStore.cs" />
-    <Compile Include="Processors\ChunkProcessor.cs" />
-    <Compile Include="Processors\IProcessChunks.cs" />
-    <Compile Include="Processors\IProcessData.cs" />
-    <Compile Include="Indexers\IIndexObjects.cs" />
-    <Compile Include="Processors\DataProcessor.cs" />
-    <Compile Include="Indexers\NestObjectsIndexer.cs" />
-    <Compile Include="Results\IndexDocumentsResult.cs" />
-    <Compile Include="Results\ObjectsProcessedResult.cs" />
-    <Compile Include="IBulkTask.cs" />
-    <Compile Include="ISource.cs" />
-    <Compile Include="Callbacks\OnBulkTaskError.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Fakes\FakeIProcessChunks.cs" />
+    <Compile Include="Fakes\FakeSource.cs" />
+    <Compile Include="Fakes\Person.cs" />
+    <Compile Include="Processors\DataProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Storage\InFileObjectsStorage.cs" />
-    <Compile Include="Storage\IStoreObjects.cs" />
-    <Compile Include="Types\IndexingError.cs" />
-    <Compile Include="Utils\Extensions.cs" />
-    <Compile Include="Utils\IndexNameResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Clients\" />
+    <ProjectReference Include="..\Bulkzor\Bulkzor.csproj">
+      <Project>{2CE375BC-1E1B-4511-A8FC-BC8A3641D62D}</Project>
+      <Name>Bulkzor</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
