--- a/src/Bulkzor.Tests/packages.config
+++ b/src/Bulkzor.Tests/packages.config
@@ -4,6 +4,6 @@
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
   <package id="NUnit" version="3.2.1" targetFramework="net45" />
-  <package id="NUnitTestAdapter" version="2.0.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.0.10" targetFramework="net45" />
   <package id="Shouldly" version="2.7.0" targetFramework="net45" />
 </packages>
