--- a/src/Bulkzor.Tests/Bulkzor.Tests.csproj
+++ b/src/Bulkzor.Tests/Bulkzor.Tests.csproj
@@ -76,7 +76,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Fakes\FakeIIndexObjects.cs" />
     <Compile Include="Fakes\FakeIndexErrorsHandler.cs" />
     <Compile Include="Fakes\FakeIProcessChunks.cs" />
@@ -94,6 +93,9 @@
       <Project>{2CE375BC-1E1B-4511-A8FC-BC8A3641D62D}</Project>
       <Name>Bulkzor</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
