--- a/src/Bulkzor/Bulkzor.csproj
+++ b/src/Bulkzor/Bulkzor.csproj
@@ -76,7 +76,6 @@
     <Compile Include="Configuration\ChunkConfiguration.cs" />
     <Compile Include="Errors\IHandleIndexErrors.cs" />
     <Compile Include="Errors\IndexErrorsHandler.cs" />
-    <Compile Include="IIndexableObject.cs" />
     <Compile Include="Models\Chunk.cs" />
     <Compile Include="Models\ChunkStore.cs" />
     <Compile Include="Processors\ChunkProcessor.cs" />
@@ -95,14 +94,11 @@
     <Compile Include="Storage\IStoreObjects.cs" />
     <Compile Include="Types\IndexingError.cs" />
     <Compile Include="Utils\Extensions.cs" />
-    <Compile Include="Utils\IndexNameResolver.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Clients\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
