--- a/src/Bulkzor/packages.config
+++ b/src/Bulkzor/packages.config
@@ -7,4 +7,5 @@
   <package id="NEST" version="2.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net45" />
   <package id="NLog" version="4.3.1" targetFramework="net45" />
+  <package id="SmartFormat.NET" version="1.6.1.0" targetFramework="net45" />
 </packages>
